# Quantitative-Finance

./: .gitignore  README.md  pyproject.toml
cloud/: README.md  env_setup_prompt.txt  startup.sh
config/: system.yaml
config/live/: live_system.yaml
deploy/: README.md
deploy/airflow/: dag_live_trading.py
deploy/kubernetes/: configmap.yaml  hourly-live-run-cronjob.yaml  live-monitor-deployment.yaml  secret.template.yaml
deploy/systemd/: broker-ws-listener.service  hourly-trading.service  hourly-trading.timer
docs/: PRODUCTION_PRECHECK.md  PUBLIC_QUANT_COMPARISON_SOURCES.md  public_quant_model_comparison.csv
docs/assets/v2_comparison/: equity_curves.csv  exposure_series.csv  metrics_comparison.csv  summary.json
scripts/: bootstrap_cloud_env.sh  generate_model_result_dashboard.py  generate_public_quant_comparison_charts.py  run_aggressive_v2_comparison.py  run_broker_ws_listener_template.py  run_dashboard.py  run_demo_backtest.py  run_live_cycle_demo.py  run_live_from_config_template.py  run_live_hourly_loop.py  run_live_monitor.py  run_preflight.sh  run_production_preflight.py
src/hourly_trading_system/: __init__.py  config.py  time_utils.py  types.py
src/hourly_trading_system/analytics/: __init__.py  live_tca.py  metrics.py
src/hourly_trading_system/backtest/: __init__.py  event_engine.py
tests/: test_anti_lookahead.py  test_backtest_flow.py  test_broker_live_templates.py  test_live_control_plane.py  test_live_event_store.py  test_live_execution_extensions.py  test_live_governance.py  test_live_monitor_stream.py  test_metrics.py
(+43 files in other folders)
