[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hourly-trading-system"
version = "0.1.0"
description = "Institutional-grade hourly long-only trading system blueprint implementation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Quant Research Engineering" }]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dashboard = [
  "plotly>=5.24.0",
  "streamlit>=1.39.0",
  "streamlit-autorefresh>=1.0.1",
]
live = [
  "websocket-client>=1.8.0",
]
ml = [
  "scikit-learn>=1.5.0",
  "lightgbm>=4.5.0",
  "torch>=2.4.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
